--- a/pages_static/templates/base.html
+++ b/pages_static/templates/base.html
@@ -205,8 +205,8 @@
                     <div class='align-center'>
                         <h3>Here to Help</h3>
                         <div style="word-break: break-all;">
-                            Email:  support@panaya.in <br>
-                            Call us: +91 93369 40122
+                            <p class="d-flex">Email: <a href="mailto:support@panaya.in"> support@panaya.in</a></p>
+                            <p class="d-flex">Call us: <a href="tel:+919336940122">+91 93369 40122</a> </p>                            
                         </div>
                     </div>
                 </div>
