--- a/pages_static/templates/pages_static/policies/delivery_shipping.html
+++ b/pages_static/templates/pages_static/policies/delivery_shipping.html
@@ -11,7 +11,7 @@
 {% block body %}
 <div class="section-heading">
     <img src="{%static 'pages_static/images/section-heading-decor.png' %}" alt="" />
-    <h1>Delivery & Shopping</h1>
+    <h1>Delivery & Shipping</h1>
     <img class="flip-horizontal" src="{%static 'pages_static/images/section-heading-decor.png' %}" alt="" />
 </div>
 <div class="container">
