--- a/blogs/templates/blog_post.html
+++ b/blogs/templates/blog_post.html
@@ -23,7 +23,7 @@
         <h1 class='col-12 align-center1'>{{blog.title}}</h1>
         <h5 class='col-12 text-muted align-center1'>{{blog.author|upper}} . {{blog.date|timesince}} ago</h5>
         <div class='row text-center'>
-            <img src="https://static.panaya.in/media/{{blog.image}}" alt="blog thumbnail">
+            <img src="/media/{{blog.image}}" alt="blog thumbnail">
         </div>
         <div class='text col-12' id='blog-text'>
             {{blog.content|safe}}
