--- a/blogs/templates/blogs.html
+++ b/blogs/templates/blogs.html
@@ -60,7 +60,7 @@
                 <div class="card mx-auto" style="max-width: 20rem;">
                     <div class="card-body">
                         <img
-                            src="https://static.panaya.in/media/{{blog.image}}"
+                            src="/media/{{blog.image}}"
                             class="card-img-top"
                             alt=""
                         />
