--- a/util_mail/static/mail/css/style.css
+++ b/util_mail/static/mail/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -40,7 +40,7 @@ body {
   padding: 1rem;
   border-radius: 10px;
   /* position: relative; */
-  background-image: url("https://static.panaya.in/static/mail/images/bg.png");
+  background-image: url("/static/mail/images/bg.png");
   background-size: contain;
 }
 
@@ -64,8 +64,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .green-tick img {
@@ -87,8 +87,8 @@ body {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
   margin: 0 0 30px 0;
 }
 
@@ -147,8 +147,8 @@ a {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
   /* margin-bottom: 200px; */
   position: relative;
 }
@@ -169,8 +169,8 @@ a {
   /* flex-flow: column wrap; */
   gap: 1;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .footer-subscribe {
