--- a/util_mail/static/mail/css/style.scss
+++ b/util_mail/static/mail/css/style.scss
@@ -41,7 +41,7 @@ body {
   // background: #fff;
   border-radius: 10px;
   /* position: relative; */
-  background-image: url("https://static.panaya.in/static/mail/images/bg.png");
+  background-image: url("/static/mail/images/bg.png");
   background-size: contain;
   // background-repeat: repeat-y;
   h3 {
