--- a/pages_static/static/pages_static/css/styles.css
+++ b/pages_static/static/pages_static/css/styles.css
@@ -8,7 +8,17 @@
   height: fit-content;
   width: auto;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 .flip-card .card {
   width: -webkit-fit-content;
   width: -moz-fit-content;
