--- a/pages_static/templates/base.html
+++ b/pages_static/templates/base.html
@@ -53,6 +53,17 @@
         }
     </style>
     {% block css %}{% endblock css %}
+    <script>
+        gtag('event', 'conversion', {'send_to': 'AW-605937688/CcuxCKKorN4BEJjA96AC'});
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-605937688"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'AW-605937688');
+    </script>
 </head>
 
 <body>
@@ -173,7 +184,7 @@
     <footer>
         <div class='container'>
             <div class='middle'>
-                <h2 onclick="signUp()">PANAYA</h2>
+                <h2>PANAYA</h2>
                 <div class='logos'>
                     <a href="https://www.facebook.com/panayasaree">
                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
