--- a/pages_static/templates/pages_static/about.html
+++ b/pages_static/templates/pages_static/about.html
@@ -21,15 +21,7 @@
                     </div>
                     <div class='text'>
                         <p style="font-family: Alegreya;">
-With our timeless and splendid sarees handcrafted by the skilled artisans of the city of Banaras, Panaya, formerly known as Oriental textile, is an aristocratic and elite name in the world of Banarasi sarees. 
-Originating from the holy city of Beneras, the rich cultural heritage of India and the piousness of the Benarasi sarees has been well preserved by Panaya through it's beautiful sarees. 
-Panaya has a history as rich and phenomenal as it's sarees, and although the brand was originally encompassed only within the holy city, it had been capturing hearts with its exquisite designs all over the world. 
-The royal collection of the Benarasi sarees from Panaya has made their way into the hearts of people with taste and an eye for beauty worldwide. 
-The six-yards of royal ethnic piece, has left impressed even Her Majesty the Queen of England. 
-It was one of the greatest moments of honour for Panaya when the Queen herself visited us and appreciated our sarees. 
-Adding another feather to our cap, the famous pop singer Goldie Hawn chose our Banarasi Saree for Michael Douglas in New York City, which was truly a cherished moment for Panaya. 
-Our sarees have also found their way in the wardrobe of the former First Lady of the United States Jacqueline Lee Kennedy Onassis, among the prominent names in royalty across the Indian subcontinent. 
-Priceless moments like this motivate us to work even harder to keep the legacy of Panaya shining across continents, being a contemporary heirloom for today's connoisseurs.
+                            With our timeless and splendid sarees handcrafted by the skilled artisans of the city of Banaras, Panaya, formerly known as Oriental textile, is an aristocratic and elite name in the world of Banarasi sarees. Originating from the holy city of Beneras, the rich cultural heritage of India and the piousness of the Benarasi sarees has been well preserved by Panaya through it's beautiful sarees. Panaya has a history as rich and phenomenal as it's sarees, and although the brand was originally encompassed only within the holy city, it had been capturing hearts with its exquisite designs all over the world. The royal collection of the Benarasi sarees from Panaya has made their way into the hearts of people with taste and an eye for beauty worldwide. The six-yards of royal ethnic piece, has left impressed even former First Lady of the United States Jacqueline Lee Kennedy Onassis. It was one of the greatest moments of honour for Panaya when she herself visited us and appreciated our sarees. Adding another feather to our cap, the famous pop singer Goldie Hawn chose our Banarasi Saree for Michael Douglas event in New York City, which was truly a cherished moment for Panaya. Our sarees have also found their way in the wardrobe of the prominent names in royalty across the Indian subcontinent. Priceless moments like this motivate us to work even harder to keep the legacy of Panaya shining across continents, being a contemporary heirloom for today's connoisseurs.
                         </p>
                     </div>
                 </div>
