--- a/product/templates/product/properties.html
+++ b/product/templates/product/properties.html
@@ -148,7 +148,13 @@
                         </a>
                     </div>
                 </div>
-                <h2 class="mt-2 fs-5">{{product.name}}</h2>
+                {% if product.stocks != 0 %}
+                    <a class="link-dark" href="{{ product.get_absolute_url }}">
+                        <p class="mt-2 fs-5">{{product.name}}</p>
+                    </a>
+                {% else %}
+                    <p class="mt-2 fs-5">{{product.name}}</p>
+                {% endif %}
                 <p class="fs-5 fw-bold">Rs. {{product.price}}</p>
             </div>
             {% endfor %}
@@ -242,6 +248,7 @@ crossorigin="anonymous"
         autoplay: true,
         nav: true,
         items:  1,
+        autoplayTimeout: 6000,
     });
 
     let pagination = (e) => {
