--- a/blogs/templates/blogs.html
+++ b/blogs/templates/blogs.html
@@ -49,7 +49,7 @@
 </section>
 
 <section id="tag-line" class="container-lg mt-5">
-    <h1 class="text-center">The simplest Indian outfits never go out of style. They're elegant, classy, and make an Indian girl look more glam than any western dress.</h1>
+    <h3 style="font-weight : 400 !important;" class="text-center">The simplest Indian outfits never go out of style. They're elegant, classy, and make an Indian girl look more glam than any western dress.</h3>
 </section>
 
 <section id="blogs" class="my-5">
@@ -60,7 +60,7 @@
                 <div class="card mx-auto" style="max-width: 20rem;">
                     <div class="card-body">
                         <img
-                            src="/media/{{blog.image}}"
+                            src="{{blog.image.url}}"
                             class="card-img-top"
                             alt=""
                         />
@@ -80,5 +80,14 @@
         </div>
     </div>
 </section>
-
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script>
+    $.ajax({
+        url: "{% url 'increase_blog_count' %}",
+        type: "GET",
+        success: function(response) {
+            // console.log(response);
+        }
+      });
+</script>
 {% endblock body %}
