--- a/product/templates/product/list.html
+++ b/product/templates/product/list.html
@@ -9,21 +9,7 @@ Products
 {% endblock title %}
 
 {% block css %}
-
 <link rel="stylesheet" href="{% static 'products/css/shop.css' %}">
-<style>
-    .row{
-        width : 100%;
-    }
-    @media only screen and (min-width: 992px) {
-        .overlay-shopnow {
-            display: none;
-        }
-        .shopNowImg:hover + .overlay-shopnow{
-            display : block;
-        }
-    }
-</style>
 {% endblock css %}
 
 {% block body %}
@@ -168,8 +154,8 @@ Products
                         </div>
                     </div>
                     <div class="text-center">
-                        <button type="submit" style="padding: .375rem .75rem;"
-                            class="btn styled-btn-filled">Search</button>
+                            <button type="submit" style="padding: .375rem .75rem;"
+                                class="btn styled-btn-filled">Search</button>
                     </div>
                 </form>
             </div>
@@ -184,36 +170,23 @@ Products
 </section>
 
 <section id="products">
-    <div class="container-lg mt-2">
+    <div class="container-lg mt-2" style="overflow:hidden;">
         <p class="fs-4">
             Showing <span class="fw-bold">{{products|length}}</span> results for saree
         </p>
         <div class="mt-2 row g-2 g-md-5 row-cols-1 row-cols-md-2 row-cols-lg-3">
-            {% comment %} <div class="col mt-0">
-                <div class="overlay-container">
-                    <img loading="lazy" class="shopNowImg" style="width: 100%" src="/assets/img/index/Rectangle 68.png" alt="" />
-                    <div class="overlay-shopnow">
-                        <button class="btn overlay-bottom overlay-shopnow-btn">
-                            Shop Now
-                        </button>
-                    </div>
-                </div>
-                <h2 class="mt-2 fs-5">Banarasi Silk Saree</h2>
-                <p class="fs-5 fw-bold">Rs. 4500</p>
-            </div> {% endcomment %}
             {% for product in products %}
             <div class="col mt-0">
                 <div class="overlay-container">
                     {% if product.stocks == 0 %}
-                    <div class="corner-ribbon top-right sticky yellow-on-red">
-                        SOLD OUT
-                    </div> 
+                        <img loading="lazy" class="shopNowImg" style="position: absolute; width: 150px; right: -50px; top: -60px; }" src="{% static 'pages_static/images/index/Ribbon.png' %}" alt="" />
+
                     {% endif %}
                     <img loading="lazy" class="shopNowImg" style="width: 100%" src="{{product.get_primary_img }}" alt="" />
-                    {% if product.stocks != 0 %}
+                    {% if product.stocks > 0 %}
                     <div class="overlay-shopnow">
                         <a href="{{ product.get_absolute_url }}">
-                        {% comment %} <a href="{% url 'product_detail' product.id %}"> {% endcomment %}   
+                        {% comment %} <a href="{% url 'product_detail' product.id %}"> {% endcomment %}
                             <button class="btn overlay-bottom overlay-shopnow-btn">
                                 Shop Now
                             </button>
@@ -221,7 +194,13 @@ Products
                     </div>
                     {% endif %}
                 </div>
-                <h2 class="mt-2 fs-5">{{product.name}}</h2>
+                {% if product.stocks > 0 %}
+                <a class="link-dark" href="{{ product.get_absolute_url }}">
+                    <p class="mt-2 fs-5">{{product.name}}</p>
+                </a>
+                {% else %}
+                <p class="mt-2 fs-5">{{product.name}}</p>
+                {% endif %}
                 <p class="fs-5 fw-bold">Rs. {{product.price}}</p>
             </div>
             {% empty %}
@@ -294,12 +273,19 @@ crossorigin="anonymous"
 />
 
 <script>
+    let loc = window.location.href;
+    if(loc.includes('search') ){
+        window.location.href = loc + '#search-filter';
+    }
+    //console.log(window.location.href);
+
     $(".owl-fw-carousel").owlCarousel({
         loop: true,
         margin: 10,
         autoplay: true,
         nav: true,
         items:  1,
+        autoplayTimeout: 6000,
     });
 
     let pagination = (e) => {
@@ -312,28 +298,3 @@ crossorigin="anonymous"
     }
 </script>
 {% endblock js %}
-{% comment %} <div id="sidebar">
-    <h3>Categories</h3>
-    <ul>
-        <li {% if not category %}class="selected" {% endif %}>
-            <a href="{% url "product_list" %}">All</a>
-        </li>
-        {% for c in categories %}
-        <li {% if category.slug == c.slug %}class="selected" {% endif %}>
-            <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
-<div id="main" class="product-list">
-    <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
-    {% for product in products %}
-    <div class="item">
-        <a href="{{ product.get_absolute_url }}">
-        </a>
-        <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
-        <br>
-        &#8377;{{ product.price }}
-    </div>
-    {% endfor %}
-</div> {% endcomment %}
