--- a/pages_static/templates/pages_static/index.html
+++ b/pages_static/templates/pages_static/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="container-lg">
           <h3 style="color: rgba(141, 0, 32, 1); font-weight: 400 !important;" class="text-center mt-3 mb-5">
-            Celeberate the occasion of Gudi Padwa with flat 20% discount on all our products by using code Gu20Padw
+            Celeberate the occasion of Gudi Padwa with flat 20% discount on all our products by using code "Gu20Padw"
           </h3>
           <div class="row g-2 g-md-5 row-cols-1 row-cols-md-3 w-100">
             <div class="owl-carousel owl-item owl-theme">
